update missing refs

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -187,6 +187,14 @@
   note={Diss. Stockholm : Univ.},
 }
 
+@article{elert1980,
+  title={Diftongeringar och konsonantinslag: Drag i uttalet av l{\aa}nga vokaler i svenskan av i dag [Diphthongizations and consonantal offglides: Traits in the pronunciation of long vowels in the Swedish of today]},
+  author={Elert, Claes-Christian},
+  journal={Spr{\aa}ken i v{\aa}rt spr{\aa}k},
+  pages={168--181},
+  year={1980}
+}
+
 @book{elert1981,
   title = {Ljud Och Ord i Svenskan},
   author = {Elert, Claes-Christian},
@@ -492,6 +500,36 @@
   pages = {273--309},
   issn = {0031-8388},
   doi = {10.1159/000484610}
+}
+
+@article{jenkins1994,
+    author = {Jenkins, James J. and Strange, Winifred and Miranda, Salvatore},
+    title = "{Vowel identification in mixed‐speaker silent‐center syllables}",
+    journal = {The Journal of the Acoustical Society of America},
+    volume = {95},
+    number = {2},
+    pages = {1030-1043},
+    year = {1994},
+    month = {02},
+    abstract = "{Strange [J. Acoust. Soc. Am. 85, 2135–2153 (1989b)] has demonstrated that there is sufficient information in the onsets and offsets of syllables, spoken in sentence context, to provide accurate identification of the vowel in the syllable. Verbrugge and Rakerd [Language Speech 29, 39–57 (1986)] and Andruski and Nearey [J. Acoust. Soc. Am. 91, 390–490 (1992)] have shown that such information is present in citation‐form syllables even when the syllables begin with one speaker and end with another. These studies of ‘‘hybrid syllables,’’ however, reported relatively high error rates. In a perceptual experiment using /dVd/ syllables spoken in sentence context by a male and a female speaker, relatively low error rates were obtained for both ‘‘silent‐center’’ syllables and ‘‘hybrid silent‐center’’ syllables. It was concluded that the information specified over syllable onsets and offsets together for identification of vowels is speaker independent and that it was sufficient in most cases to specify the vowel. The acoustic patterns, represented as functions of log(F2/F1) over time, revealed potentially useful dynamic acoustic characteristics of coarticulated vowels.}",
+    issn = {0001-4966},
+    doi = {10.1121/1.410014},
+    url = {https://doi.org/10.1121/1.410014},
+    eprint = {https://pubs.aip.org/asa/jasa/article-pdf/95/2/1030/12067472/1030\_1\_online.pdf},
+}
+
+@incollection{johnson2005,
+  title = {Speaker Normalization in Speech Perception},
+  booktitle = {The {{Handbook}} of {{Speech Perception}}},
+  author = {Johnson, Keith},
+  editor = {Pisoni, David B. and Remez, Robert E.},
+  year = {2005},
+  month = jan,
+  pages = {363--389},
+  publisher = {{John Wiley \& Sons, Inc.}},
+  abstract = {Summary This chapter contains sections titled: Perceiving Vowels in Isolated Syllables Formant Ratio Theories From Auditory Gestalts to Vocal Tract Actions Vocal Tract Normalization Talkers or Vocal Tractsquest; Talker Normalization},
+  isbn = {9780470757024},
+  keywords = {isolated syllables,phonological identity,speaker normalization,speech perception,vowel perception}
 }
 
 @incollection{johnson-sjerps2021,
@@ -929,6 +967,22 @@ year = {2018}
   keywords = {context effects,speech categorization,speech perception}
 }
 
+@article{strange1989,
+    author = {Strange, Winifred},
+    title = "{Evolving theories of vowel perception}",
+    journal = {The Journal of the Acoustical Society of America},
+    volume = {85},
+    number = {5},
+    pages = {2081-2087},
+    year = {1989},
+    month = {05},
+    abstract = "{Research on the perception of vowels in the last several years has given rise to new conceptions of vowels as articulatory, acoustic, and perceptual events. Starting from a ‘‘simple’’ target model in which vowels were characterized articulatorily as static vocal tract shapes and acoustically as points in a first and second formant (F1/F2) vowel space, this paper briefly traces the evolution of vowel theory in the 1970s and 1980s in two directions. (1) Elaborated target models represent vowels as target zones in perceptual spaces whose dimensions are specified as formant ratios. These models have been developed primarily to account for perceivers’ solution of the ‘‘speaker normalization’’ problem. (2) Dynamic specification models emphasize the importance of formant trajectory patterns in specifying vowel identity. These models deal primarily with the problem of ‘‘target undershoot’’ associated with the coarticulation of vowels with consonants in natural speech and with the issue of ‘‘vowel‐inherent spectral change’’ or diphthongization of English vowels. Perceptual studies are summarized that motivate these theoretical developments.}",
+    issn = {0001-4966},
+    doi = {10.1121/1.397860},
+    url = {https://doi.org/10.1121/1.397860},
+    eprint = {https://pubs.aip.org/asa/jasa/article-pdf/85/5/2081/12017964/2081\_1\_online.pdf},
+}
+
 @article{strangert2001,
   title={Quantity in ten Swedish dialects in Northern Sweden and {\"O}sterbotten in Finland},
   author={Strangert, Eva},
@@ -983,6 +1037,29 @@ year = {2018}
   file = {/Users/anpe7128/Zotero/storage/J7YKRZFR/Syrdal - 1985 - Aspects of a model of the auditory representation .pdf}
 }
 
+@article{watson-harrington1999,
+    author = {Watson, Catherine I. and Harrington, Jonathan},
+    title = "{Acoustic evidence for dynamic formant trajectories in Australian English vowels}",
+    journal = {The Journal of the Acoustical Society of America},
+    volume = {106},
+    number = {1},
+    pages = {458-468},
+    year = {1999},
+    month = {07},
+    abstract = "{The extent to which it is necessary to model the dynamic behavior of vowel formants to enable vowel separation has been the subject of debate in recent years. To investigate this issue, a study has been made on the vowels of 132 Australian English speakers (male and female). The degree of vowel separation from the formant values at the target was contrasted to that from modeling the formant contour with discrete cosine transform coefficients. The findings are that, although it is necessary to model the formant contour to separate out the diphthongs, the formant values at the target, plus vowel duration are sufficient to separate out the monophthongs. However, further analysis revealed that there are formant contour differences which benefit the within-class separation of the tense/lax monophthong pairs.}",
+    issn = {0001-4966},
+    doi = {10.1121/1.427069},
+    url = {https://doi.org/10.1121/1.427069},
+    eprint = {https://pubs.aip.org/asa/jasa/article-pdf/106/1/458/8086358/458\_1\_online.pdf},
+}
+
+@inproceedings{weirich2019,
+  title={The phonetics of gender in Swedish and German},
+  author={Weirich, Melanie and Simpson, Adrian P and {\"O}jbro, Jasmine and Ericsdotter Nordgren, Christine},
+  booktitle={Fonetik 2019, Stockholm, Sweden, 10-12 June, 2019},
+  pages={49--53},
+  year={2019}
+}
 
 @book{wenner2010,
   title = {N\"ar L\"ognare Blir Lugnare},
