edits to text, figs, refs

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -490,6 +490,22 @@
   file = {/Users/anpe7128/Zotero/storage/I24LWKJ8/Hillenbrand and Nearey - 1999 - Identification of resynthesized hVd utterances .pdf}
 }
 
+@article{hillenbrand2001,
+    author = {Hillenbrand, James M. and Clark, Michael J. and Nearey, Terrance M.},
+    title = "{Effects of consonant environment on vowel formant patterns}",
+    journal = {The Journal of the Acoustical Society of America},
+    volume = {109},
+    number = {2},
+    pages = {748-763},
+    year = {2001},
+    month = {02},
+    abstract = "{A significant body of evidence has accumulated indicating that vowel identification is influenced by spectral change patterns. For example, a large-scale study of vowel formant patterns showed substantial improvements in category separability when a pattern classifier was trained on multiple samples of the formant pattern rather than a single sample at steady state [J. Hillenbrand et al., J. Acoust. Soc. Am. 97, 3099–3111 (1995)]. However, in the earlier study all utterances were recorded in a constant /hVd/ environment. The main purpose of the present study was to determine whether a close relationship between vowel identity and spectral change patterns is maintained when the consonant environment is allowed to vary. Recordings were made of six men and six women producing eight vowels (/i,ɪ,ɛ,æ,ɑ,ᴜ,u,ʌ/) in isolation and in CVC syllables. The CVC utterances consisted of all combinations of seven initial consonants (/h,b,d,g,p,t,k/) and six final consonants (/b,d,g,p,t,k/). Formant frequencies for F1–F3 were measured every 5 ms during the vowel using an interactive editing tool. Results showed highly significant effects of phonetic environment. As with an earlier study of this type, particularly large shifts in formant patterns were seen for rounded vowels in alveolar environments [K. Stevens and A. House, J. Speech Hear. Res. 6, 111–128 (1963)]. Despite these context effects, substantial improvements in category separability were observed when a pattern classifier incorporated spectral change information. Modeling work showed that many aspects of listener behavior could be accounted for by a fairly simple pattern classifier incorporating F0, duration, and two discrete samples of the formant pattern.}",
+    issn = {0001-4966},
+    doi = {10.1121/1.1337959},
+    url = {https://doi.org/10.1121/1.1337959},
+    eprint = {https://pubs.aip.org/asa/jasa/article-pdf/109/2/748/8087543/748\_1\_online.pdf},
+}
+
 @article{jacewicz-fox2018,
   title = {Regional variation in fundamental frequency of American English vowels},
   author = {Jacewicz, Ewa and Fox, Robert Allen},
@@ -837,6 +853,17 @@
   file = {/Users/anpe7128/Zotero/storage/LP5L4BJH/Peterson - 1961 - Parameters of Vowel Quality.pdf}
 }
 
+@article{pycha2016,
+  author = {Anne Pycha},
+  title ={Co-articulatory Cues for Communication: An Investigation of Five Environments},
+  journal = {Language and Speech},
+  volume = {59},
+  number = {3},
+  pages = {364-386},
+  year = {2016},
+  doi = {10.1177/0023830915603878}
+}
+
 @article{renwick-stanley2020,
   title = {Modeling dynamic trajectories of front vowels in the American South},
   author = {Renwick, Margaret E L and Stanley, Joseph A},
@@ -935,12 +962,25 @@ year = {2018}
   pages = {1--15}
 }
 
-@book{Stevens2000,
+@book{stevens1998,
   title = {Acoustic Phonetics},
   author = {Stevens, Kenneth N},
-  year = {2000},
+  year = {1998},
   publisher = {{MIT Press}},
   city = {Cambridge, MA}
+}
+
+@article{stevens-house1963,
+  author = {Kenneth N. Stevens and Arthur S. House},
+  title = {Perturbation of Vowel Articulations By Consonantal Context: An Acoustical Study},
+  journal = {Journal of Speech and Hearing Research},
+  volume = {6},
+  number = {2},
+  pages  = {111-128},
+  year = {1963},
+  doi = {10.1044/jshr.0602.111},
+  URL = {https://pubs.asha.org/doi/abs/10.1044/jshr.0602.111},
+  eprint = {https://pubs.asha.org/doi/pdf/10.1044/jshr.0602.111}
 }
 
 @article{stevens-schiel2019,
