edits after feedback

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -54,6 +54,16 @@
   urldate = {2023-01-11}
 }
 
+@article{baayen2017,
+  title={The cave of shadows: Addressing the human factor with generalized additive mixed models},
+  author={Baayen, Harald and Vasishth, Shravan and Kliegl, Reinhold and Bates, Douglas},
+  journal={Journal of Memory and Language},
+  volume={94},
+  pages={206--234},
+  year={2017},
+  publisher={Elsevier}
+}
+
 @article{behne-kirk1997,
   title = {Swedish {{Quantity}} and {{Quality}}: {{A Traditional Issue Revisited}}},
   author = {Behne, Dawn M and Czigler, Peter E and Sullivan, Kirk P H},
@@ -1091,6 +1101,16 @@ year = {2018}
     doi = {10.1121/1.427069},
     url = {https://doi.org/10.1121/1.427069},
     eprint = {https://pubs.aip.org/asa/jasa/article-pdf/106/1/458/8086358/458\_1\_online.pdf},
+}
+
+@article{wieling2018,
+  title={Analyzing dynamic phonetic data using generalized additive mixed modeling: A tutorial focusing on articulatory differences between L1 and L2 speakers of English},
+  author={Wieling, Martijn},
+  journal={Journal of Phonetics},
+  volume={70},
+  pages={86--116},
+  year={2018},
+  publisher={Elsevier}
 }
 
 @inproceedings{weirich2019,
