--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -726,6 +726,43 @@ p.merge / p.merge.F3 + theme(axis.title.x = element_blank()) +
         plot.tag = element_text(face = "bold"))
 ```
 
+```{r}
+#Try to calculate the category separability based on Xie & Jaeger 2020
+get_category_separability <- function(
+    data,
+    category_A, 
+    category_B, 
+    n = length(category_A)) {
+  data %>%
+    group_by(Talker, category) %>%
+    mutate(
+      category_separability_F1 = case_when(category == category_A ~ (F1 - data[data$category == category_B,]$F1_centroid)^2),
+      category_separability_F2 = case_when(category == category_A ~ (F2 - data[data$category == category_B,]$F2_centroid)^2),
+      category_separability_F3 = case_when(category == category_A ~ (F3 - data[data$category == category_B,]$F3_centroid)^2),
+      overall_separability = (sum(n) * sqrt(category_separability_F1 + category_separability_F2)) / n)
+}
+
+d.SwehVd.forStudy.long.static %>% 
+  filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[iː]", "[ɪ]", "[yː]", "[ʏ]")) %>%
+  left_join(
+    d.SwehVd.forStudy.long.static %>% 
+      filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[iː]", "[ɪ]", "[yː]", "[ʏ]")) %>%
+      group_by(Talker, category) %>%
+      summarise(across(starts_with("F"), ~ mean(.x))) %>%
+      select(Talker, category, F1, F2, F3),
+    by = c("Talker", "category")) %>%
+  mutate(
+    F1 = F1.x,
+    F2 = F2.x,
+    F3 = F3.x,
+    F1_centroid = F1.y,
+    F2_centroid = F2.y,
+    F3_centroid = F3.y) %>%
+  select(-ends_with(c(".x", ".y"))) %>%
+  group_by(Talker, category) %>%
+  get_category_separability(category_A = "[iː]", category_B = "[yː]")
+```
+
 #### Quantity vs. quality in long and short vowel pairs
 To gain more insight into the extent to which there are spectral and temporal differences between long and short vowels, the acoustics of categories within vowel pairs are evaluated. Next, we ask whether quantity and quality distinctions seem to be separate from each other.
 
@@ -776,12 +813,12 @@ d.SwehVd.vowel_pairs %>%
 
 All long-short vowel pairs display spectral differences in F1-F2. In fact, as indicated in Figure \@ref(fig:swe-vowels), formant differences are apparent for *all* vowel pairs, even for some vowel distinctions for which duration has been found to be the primary cue---[`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`], [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], and [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] [e.g., @behne-kirk1997; @haddingkoch1964; @kuronen2000]. The vowel pairs that display larger spectral differences along F1-F2 seem to be [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("ɵ")`] and [`r linguisticsdown::cond_cmpl("ɑː")`] - [`r linguisticsdown::cond_cmpl("a")`] [in line with e.g., @fant1983; @kuronen2000], but also [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], which contrasts with previous studies. The large spectral differences in [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`] are presumably due to [`r linguisticsdown::cond_cmpl("ɛː")`] being produced very low in the SwehVd materials, which leads to a gap along the top-left to bottom-left diagonal between [`r linguisticsdown::cond_cmpl("eː")`] and [`r linguisticsdown::cond_cmpl("ɛ")`]. Overall, F2 appears to carry more of the spectral variation between the long and short vowel phonemes, as categories display increased separability in the pairwise combination of F2 and duration (Figure \@ref(fig:swe-vowels-all-cues), rightmost column, third row). The results thus seem to indicate that quantity distinctions---long vs. short vowels---are not separate from quality distinctions---high, low, front, back vowels.
 
-To sum up, the results of the static analysis suggests that...<!--add summary here--> Of course, formants are not static but rather fluctuate across the signal. Aiming to address one of the cue questions in formant dynamics, the next section investigates how much does dynamic information add to the relative weight of cues.
+To sum up, the results of the static analysis suggests that...<!--add summary here--> Of course, formants are not static but rather fluctuate across the signal. Aiming to address one of the cue questions in formant dynamics, the next section investigates how much does dynamic information add to the relative weight of cues.<!--given hypotheses that dynamics should benefit perception-->
 
 ### Dynamic spectral analysis {#sec:swehVd-dynamics}
 The dynamic analysis of the spectral acoustics of the 21 vowels begins with visualizations of the empirical data in formant trajectory plots. The aim is to assess...<!--add here--> and evaluate claims of diphthongization in previous work, as well as the extent to which short vowels also display formant movements.
 
-The spectral cues are then modeled with GAMMs, first focusing on the movements in all 21 categories, then on spectral differences between the long and short vowel pairs, in order to assess to what extent dynamic information adds to the relative contribution of each of the cues to vowel distinctions.
+The spectral cues are then modeled with GAMMs, first focusing on the movements in all 21 categories, then on spectral differences between the long and short vowel pairs, in order to assess to what extent dynamic information adds to the relative contribution of each of the cues to vowel distinctions. I thus ask...
 
 #### Formant movements across the space
 <!--add something here about what is diphthongization and what seems to be merely movement? kuronens claims about i-y-e and u-o differed only at later tp, and ä-är only by trajectory movements-->
